--- a/po/comas.pot
+++ b/po/comas.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: comas 1.0\n"
-"POT-Creation-Date: 2009-05-08 14:22-0500\n"
+"POT-Creation-Date: 2009-05-08 18:30-0500\n"
 "PO-Revision-Date: 2008-05-07 18:30-0600\n"
 "Last-Translator: Gunnar Wolf <gwolf@gwolf.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -24,7 +24,7 @@ msgid "Document|Filename"
 msgstr ""
 
 #: app/models/document.rb:-
-msgid "Document|Descr"
+msgid "Document|Description"
 msgstr ""
 
 #: app/models/document.rb:-
@@ -72,7 +72,7 @@ msgid "certif format"
 msgstr ""
 
 #: app/models/certif_format.rb:-
-msgid "CertifFormat|Name"
+msgid "CertifFormat|Format name"
 msgstr ""
 
 #: app/models/certif_format.rb:-
@@ -93,7 +93,7 @@ msgstr ""
 
 #: app/models/person.rb:-
 #, fuzzy
-msgid "AdminTask|Sys name"
+msgid "AdminTask|System name"
 msgstr "System configuration"
 
 #: app/models/person.rb:-
@@ -105,15 +105,15 @@ msgid "Person|Login"
 msgstr ""
 
 #: app/models/person.rb:-
-msgid "Person|Passwd"
+msgid "Person|Password"
 msgstr ""
 
 #: app/models/person.rb:-
-msgid "Person|Firstname"
+msgid "Person|First name"
 msgstr ""
 
 #: app/models/person.rb:-
-msgid "Person|Famname"
+msgid "Person|Family name"
 msgstr ""
 
 #: app/models/person.rb:-
@@ -121,7 +121,7 @@ msgid "Person|Email"
 msgstr ""
 
 #: app/models/person.rb:-
-msgid "Person|Pw salt"
+msgid "Person|Random password salt"
 msgstr ""
 
 #: app/models/person.rb:-
@@ -133,11 +133,11 @@ msgid "Person|Last login at"
 msgstr ""
 
 #: app/models/person.rb:-
-msgid "Person|Ok conf mails"
+msgid "Person|Ok to receive conference-specific mails?"
 msgstr ""
 
 #: app/models/person.rb:-
-msgid "Person|Ok general mails"
+msgid "Person|OK to receive general mails?"
 msgstr ""
 
 #: app/models/person.rb:-
@@ -149,7 +149,7 @@ msgid "Conference|Name"
 msgstr ""
 
 #: app/models/person.rb:-
-msgid "Conference|Descr"
+msgid "Conference|Description"
 msgstr ""
 
 #: app/models/person.rb:-
@@ -157,19 +157,19 @@ msgid "Conference|Homepage"
 msgstr ""
 
 #: app/models/person.rb:-
-msgid "Conference|Reg open date"
+msgid "Conference|Registration opening date"
 msgstr ""
 
 #: app/models/person.rb:-
-msgid "Conference|Reg close date"
+msgid "Conference|Registration closing date"
 msgstr ""
 
 #: app/models/person.rb:-
-msgid "Conference|Cfp open date"
+msgid "Conference|Call for Papers opening date"
 msgstr ""
 
 #: app/models/person.rb:-
-msgid "Conference|Cfp close date"
+msgid "Conference|Call for papers closing date"
 msgstr ""
 
 #: app/models/person.rb:-
@@ -247,7 +247,7 @@ msgid "SysConf|Key"
 msgstr ""
 
 #: app/models/sys_conf.rb:-
-msgid "SysConf|Descr"
+msgid "SysConf|Description"
 msgstr ""
 
 #: app/models/sys_conf.rb:-
@@ -295,11 +295,11 @@ msgid "timeslot"
 msgstr ""
 
 #: app/models/timeslot.rb:-
-msgid "Timeslot|Tolerance pre"
+msgid "Timeslot|Tolerance (pre)"
 msgstr ""
 
 #: app/models/timeslot.rb:-
-msgid "Timeslot|Tolerance post"
+msgid "Timeslot|Tolerance (post)"
 msgstr ""
 
 #: app/models/timeslot.rb:-
@@ -387,11 +387,11 @@ msgid "Proposal|Updated at"
 msgstr ""
 
 #: app/models/proposal.rb:-
-msgid "Proposal|Prop type"
+msgid "Proposal|Proposal type"
 msgstr ""
 
 #: app/models/proposal.rb:-
-msgid "Proposal|Prop status"
+msgid "Proposal|Proposal status"
 msgstr ""
 
 #: app/models/proposal.rb:-
@@ -416,19 +416,19 @@ msgid "nametag format"
 msgstr ""
 
 #: app/models/nametag_format.rb:-
-msgid "NametagFormat|Name"
+msgid "NametagFormat|Format name"
 msgstr ""
 
 #: app/models/nametag_format.rb:-
-msgid "NametagFormat|H size"
+msgid "NametagFormat|Horizontal size"
 msgstr ""
 
 #: app/models/nametag_format.rb:-
-msgid "NametagFormat|V size"
+msgid "NametagFormat|Vertical size"
 msgstr ""
 
 #: app/models/nametag_format.rb:-
-msgid "NametagFormat|V gap"
+msgid "NametagFormat|Vertical gap"
 msgstr ""
 
 #: app/models/nametag_format.rb:-
@@ -436,35 +436,31 @@ msgid "NametagFormat|Name width"
 msgstr ""
 
 #: app/models/nametag_format.rb:-
-msgid "NametagFormat|H start"
+msgid "NametagFormat|Horizontal start"
 msgstr ""
 
 #: app/models/nametag_format.rb:-
-msgid "NametagFormat|V start"
+msgid "NametagFormat|Vertical start"
 msgstr ""
 
 #: app/models/nametag_format.rb:-
-msgid "NametagFormat|Id bar hpos"
+msgid "NametagFormat|Barcode horizontal position"
 msgstr ""
 
 #: app/models/nametag_format.rb:-
-msgid "NametagFormat|Id bar vpos"
+msgid "NametagFormat|Barcode orientation"
 msgstr ""
 
 #: app/models/nametag_format.rb:-
-msgid "NametagFormat|Id bar orient"
+msgid "NametagFormat|Barcode narrow bars width"
 msgstr ""
 
 #: app/models/nametag_format.rb:-
-msgid "NametagFormat|Id bar narrow"
+msgid "NametagFormat|Barcode wide bars width"
 msgstr ""
 
 #: app/models/nametag_format.rb:-
-msgid "NametagFormat|Id bar wide"
-msgstr ""
-
-#: app/models/nametag_format.rb:-
-msgid "NametagFormat|Id bar height"
+msgid "NametagFormat|Barcode height"
 msgstr ""
 
 #: app/models/nametag_format.rb:-
@@ -516,15 +512,15 @@ msgid "CertifFormatLine|Content"
 msgstr ""
 
 #: app/models/certif_format_line.rb:-
-msgid "CertifFormatLine|X pos"
+msgid "CertifFormatLine|Horizontal position"
 msgstr ""
 
 #: app/models/certif_format_line.rb:-
-msgid "CertifFormatLine|Y pos"
+msgid "CertifFormatLine|Vertical position"
 msgstr ""
 
 #: app/models/certif_format_line.rb:-
-msgid "CertifFormatLine|Max width"
+msgid "CertifFormatLine|Maximum width"
 msgstr ""
 
 #: app/models/certif_format_line.rb:-
@@ -536,7 +532,7 @@ msgid "CertifFormatLine|Justification"
 msgstr ""
 
 #: app/models/certif_format_line.rb:-
-msgid "CertifFormatLine|Certif format"
+msgid "CertifFormatLine|Certificate format"
 msgstr ""
 
 #: app/models/certif_format_line.rb:4
@@ -600,7 +596,7 @@ msgid "Logo|Data"
 msgstr ""
 
 #: app/models/logo.rb:-
-msgid "Logo|Thumb"
+msgid "Logo|Thumbnail"
 msgstr ""
 
 #: app/models/logo.rb:-
@@ -1002,6 +998,8 @@ msgid "Take attendance"
 msgstr ""
 
 #: app/controllers/attendance_adm_controller.rb:5
+#: app/helpers/conferences_helper.rb:91
+#: app/views/attendance_adm/list.html.erb:1
 msgid "Attendance lists"
 msgstr ""
 
@@ -1013,46 +1011,42 @@ msgstr ""
 msgid "Please select a timeslot to take attendance for"
 msgstr ""
 
-#: app/controllers/attendance_adm_controller.rb:69
-msgid "Could not find which conference to report"
-msgstr ""
-
-#: app/controllers/attendance_adm_controller.rb:83
+#: app/controllers/attendance_adm_controller.rb:78
 msgid "Invalid timeslot requested"
 msgstr ""
 
-#: app/controllers/attendance_adm_controller.rb:141
+#: app/controllers/attendance_adm_controller.rb:136
 msgid "Format updated successfully"
 msgstr ""
 
-#: app/controllers/attendance_adm_controller.rb:248
+#: app/controllers/attendance_adm_controller.rb:243
 msgid ""
 "This person has already been registered for this timeslot. No action taken."
 msgstr ""
 
-#: app/controllers/attendance_adm_controller.rb:259
+#: app/controllers/attendance_adm_controller.rb:254
 msgid ""
 "<em>%s</em> is not registered for <em>%s</em>, and registrations are closed."
 msgstr ""
 
-#: app/controllers/attendance_adm_controller.rb:265
+#: app/controllers/attendance_adm_controller.rb:260
 msgid ""
 "Person <em>%s</em> was not yet registered for this conference - Registering."
 msgstr ""
 
-#: app/controllers/attendance_adm_controller.rb:271
+#: app/controllers/attendance_adm_controller.rb:266
 msgid "Attendance successfully registered"
 msgstr ""
 
-#: app/controllers/attendance_adm_controller.rb:273
+#: app/controllers/attendance_adm_controller.rb:268
 msgid "Could not register person <em>%s</em> for this timeslot: %s"
 msgstr ""
 
-#: app/controllers/attendance_adm_controller.rb:291
+#: app/controllers/attendance_adm_controller.rb:286
 msgid "Invalid person specified"
 msgstr ""
 
-#: app/controllers/attendance_adm_controller.rb:298
+#: app/controllers/attendance_adm_controller.rb:293
 msgid "Invalid format specified"
 msgstr ""
 
@@ -1368,6 +1362,14 @@ msgstr ""
 msgid "%s or %s if you are interested in attending this conference"
 msgstr ""
 
+#: app/helpers/application_helper.rb:66
+msgid "Please register"
+msgstr ""
+
+#: app/helpers/application_helper.rb:68
+msgid "log in"
+msgstr ""
+
 #: app/helpers/application_helper.rb:85
 #: app/views/attendance_adm/_list_by_attendances.html.erb:3
 msgid "Show"
@@ -1472,7 +1474,7 @@ msgstr ""
 msgid "Edit timeslots"
 msgstr ""
 
-#: app/helpers/conferences_helper.rb:109
+#: app/helpers/conferences_helper.rb:112
 msgid "Invalid logo size specified: %s"
 msgstr ""
 
@@ -1858,24 +1860,28 @@ msgstr ""
 msgid "Are you sure you want to delete this format?"
 msgstr ""
 
-#: app/views/attendance_adm/list.html.erb:1
+#: app/views/attendance_adm/list.html.erb:2
 msgid "Attendance list for <em>%s</em>"
 msgstr ""
 
-#: app/views/attendance_adm/list.html.erb:3
-msgid "Select any other conference you want the attendance list for"
-msgstr ""
-
-#: app/views/attendance_adm/list.html.erb:13
+#: app/views/attendance_adm/list.html.erb:5
 msgid "Attendance distribution for %d registered timeslots"
 msgstr ""
 
-#: app/views/attendance_adm/list.html.erb:19
+#: app/views/attendance_adm/list.html.erb:11
 msgid "No attendances registered"
 msgstr ""
 
-#: app/views/attendance_adm/list.html.erb:21
+#: app/views/attendance_adm/list.html.erb:13
 msgid "Full listing, ordered by number of attendances"
+msgstr ""
+
+#: app/views/attendance_adm/list.html.erb:26
+msgid "No conferences have yet attendance lists"
+msgstr ""
+
+#: app/views/attendance_adm/list.html.erb:28
+msgid "Select any other conference you want the attendance list for"
 msgstr ""
 
 #: app/views/attendance_adm/att_by_tslot.html.erb:1
